<resources>
    <string name="app_name">AppClubdeportivo</string>
    <string name="signIn">Ingresar</string>
    <string name="signUp">Registrarse</string>
    <string name="login">Iniciar Sesión</string>
    <string name="hintUsername">Ingrese su usuario</string>
    <string name="hintPassword">Ingrese su contraseña</string>
    <string name="forgotPassword">Olvidé mi contraseña</string>
    <string name="logoDesc">Logo del Club Deportivo Mateo</string>
    <string name="btnBackDesc">Botón para volver atrás</string>
    <string name="btnMenuDesc">Botón menú desplegable</string>
    <string name="userName">Nombres</string>
    <string name="lastName">Apellidos</string>
    <string name="dni">Dni</string>
    <string name="nacionality">Nacionalidad</string>
    <string name="tlf">Telefono</string>
    <string name="dress">Direccion</string>
    <string name="height">Altura</string>
    <string name="district">Barrio</string>
    <string name="locality">Localidad</string>
    <string name="register">Inscribir</string>
    <string name="cancel">Cancelar</string>
    <string name="confirm">Confirmar</string>
    <string name="consult">Consultar</string>
    <string name="formSocio">Formulario de Inscripción de Socio</string>
    <string name="formNoSocio">Formulario de Inscripción de No Socio</string>
    <string name="cash">Efectivo</string>
    <string name="creditCard">Tarjeta de Credito</string>
    <string name="cancelmonthlyPlayment">Pago de Cuota Mensual/Cuota Diaria</string>
    <string name="DropSysten">Dar de Baja del Sistema</string>
    <string name="DropPartner">Baja Socio</string>
    <string name="DropNoPartner">Baja No Socio</string>
    <string name="registerActivities">Inscribir Actividad Socio</string>
    <string name="unsubscribeActivities">Desinscribir Actividad</string>
    <string name="unsubscribe">Desinscribir</string>
    <string name="checkActivity">Consultar Actividad</string>
    <string name="activityManagement">Gestión de Actividades Socios</string>
    <string name="activityNoManagement">Gestión de Actividades No Socios</string>
    <string name="cuota1">1 cuota</string>
    <string name="cuota3">3 cuotas</string>
    <string name="cuota6">6 cuotas</string>
    <string name="totalPay">Total a Pagar:</string>
    <string name="manageMembers">Gestionar Socios</string>
    <string name="manageNonMembers">Gestionar No Socios</string>
    <string name="deudores">Mostrar Deudores</string>
    <string name="altaSocio">Alta Socio</string>
    <string name="altaNoSocio">Alta No Socio</string>
    <string name="payFee">Pagar Cuota</string>
    <string name="activities">Actividades</string>
    <string name="listMembers">Listado de Socios</string>
    <string name="listNonMembers">Listado de No Socios</string>
    <string name="generateCard">Generar Carnet</string>
    <string name="managePartner">Gestionar Socio</string>
    <string name="manageNoPartner">Gestionar No Socio</string>
    <string name="recoverPassword">Recuperar</string>
    <string name="mail">Email</string>
    <string name="selectActivities">Seleccione la  Actividad</string>
    <string name="parnertName">Nombre de Socio</string>
    <string name="noParnertName">Nombre de No Socio</string>
    <string name="print">Imprimir</string>
    <string name="close">Cerrar</string>
    <string name="paymentReceipt">Recibo de Pago</string>
    <string name="namepago">Nombre del cliente: Juan Pérez</string>
    <string name="amount">Monto pagado: $1,500.00</string>
    <string name="pay">Método de pago: Tarjeta de crédito</string>
    <string name="dateAndTime">Fecha: 15/05/2025 - 10:32 AM</string>
    <string name="voucher">N° de comprobante: 000123456789</string>
    <string name="successfulPayment">Pago Exitoso</string>
    <string name="ActivityConsul">Consulta de Actividades Inscritas</string>
    <string name="newPassword">Nueva Contraseña</string>
    <string name="confirmPassword">Confirmar Contraseña</string>
    <string name="registerActivitiesNoSocio">Inscribir Actividad No Socio</string>


</resources>